[metadata]
name = pytest-tmpfs
version = attr: pytest_tmpfs.__version__
description = A pytest plugin that helps you on using a temporary filesystem for testing.
author = nickolasrm
author_email = nickolasrochamachado@gmail.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickolasrm/pytest-tmpfs
platforms = any

[options.entry_points]
pytest11 =
    pytest_tmpfs = pytest_tmpfs.plugin

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    pytest

[options.extras_require]
test =
    pytest-cov
dev =
    %(test)s
